--- a/src/styles/Layout/Layout.css
+++ b/src/styles/Layout/Layout.css
@@ -4,6 +4,11 @@
 }
 
 .content-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    padding: 0 20px;
     max-width: 1200px;
 }
