--- a/src/styles/Portrait/Portrait.css
+++ b/src/styles/Portrait/Portrait.css
@@ -1,6 +1,6 @@
 .Portrait {
     position: relative;
-    height: 600px;
+    height: 220px;
     clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
@@ -12,8 +12,12 @@
 
 .img-overlay {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 150px 180px 100px 170px;
+    grid-template-columns: minmax(300px, 540px);
+    grid-template-rows: 1fr 1fr;
+    row-gap: 20px;
+    padding: 40px 50px 60px;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
@@ -23,28 +27,47 @@
 }
 
 .img-description {
-    grid-row: 2 / 3;
-    grid-column: 2 / 5;
+    align-self: end;
     color: var(--white);
     font-family: var(--Gotham-Black-Font);
-    font-size: 3.6rem;
+    font-size: 1.8rem;
     text-align: center;
 }
 
 .img-button {
-    grid-row: 3 / 4;
-    grid-column: 3 / 4;
     justify-self: center;
-    align-self: center;
+    align-self: start;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 190px;
-    height: 40px;
+    padding: 0 14px;
+    height: 24px;
     background-color: var(--secundary-color);
-    border-radius: 25px;
+    border-radius: 4px;
     color: var(--white);
     font-family: var(--GothamBook-Font);
-    font-size: 2rem;
+    font-size: 1.2rem;
     text-decoration: none;
+}
+
+@media (min-width: 800px) {
+    .Portrait {
+        height: 400px;
+    }
+
+    .img-overlay {
+        row-gap: 40px;
+    }
+    
+
+    .img-description {
+        font-size: 3.6rem;
+    }
+
+    .img-button {
+        padding: 0 24px;
+        height: 40px;
+        border-radius: 20px;
+        font-size: 2rem;
+    }
 }
