--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -2,6 +2,7 @@
     /*Colors*/
     --primary-color: #0D3B66;
     --secundary-color: #F95738;
+    --mustard-color: #F4D35E;
     --white: #FFFFFF;
     --black: #1A1A1A;
 
