--- a/src/styles/Contacto/Contacto.css
+++ b/src/styles/Contacto/Contacto.css
@@ -1,17 +1,16 @@
 .contacto {
     display: flex;
     justify-content: center;
-    padding: 48px 20px 56px;
+    padding: 118px 20px 56px;
     position: relative;
 }
 
 .contacto::after {
     content: '';
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    top: 70px;
+    width: 100%;
+    height: 100%;
     background-color: var(--secundary-color);
     clip-path: polygon(0% 4%, 100% 0%, 100% 100%, 0 100%);
     z-index: -1;
@@ -23,7 +22,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: -0px;
+    top: 70px;
     padding: 0px 12px;
     height: 28px;
     background-color: var(--primary-color);
@@ -42,12 +41,13 @@
 
 @media (min-width: 800px) {
     .contacto {
-        padding: 120px 50px 48px;
+        padding: 170px 50px 48px;
     }
 
     .contacto::after {
         clip-path: polygon(0% 8%, 100% 0%, 100% 100%, 0 100%);
     }
+
     .contacto > h2 {
         padding: 0px 40px;
         height: 60px;
