--- a/src/styles/Contacto/ContactoInfo.css
+++ b/src/styles/Contacto/ContactoInfo.css
@@ -19,52 +19,67 @@
 
 .contacto-info {
     display: grid;
+    justify-items: center;
     align-items: start;
-    grid-template-rows: 40px 40px 116px;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-rows: 40px 40px auto;
+    grid-template-columns: 1fr 1fr;
     margin: 28px 0px;
 }
 
-.contacto-info > span:nth-child(2n + 1) {
-    justify-self: flex-end;
-    grid-column: 1 / 2;
-    margin-right: 4px;
-    font-family: var(--GothamBook-Font);
-    font-size: 1.2rem;
-    text-align: right;
+.contacto-info-item {
+    display: flex;
+    align-items: center;
+    height: 15px;
 }
 
-.contacto-info > span:nth-child(2n + 2) {
-    grid-column: 2 / 3;
-    font-family: var(--Gotham-Black-Font);
+.contacto-info-item > span {
     font-size: 1.4rem;
-    text-align: left;
+}
+
+.contact-icon {
+    width: 15px;
+    height: 15px;
+}
+
+.contacto-info-item > span:nth-child(2) {
+    margin: 0 4px;
+    font-family: var(--GothamBook-Font);
+}
+
+.contacto-info-item > span:nth-child(3) {
+    font-family: var(--Gotham-Black-Font);
 }
 
 .icons-container {
     align-self: center;
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.icons-container > .contact-icon:first-child {
-    margin-left: 0px;
-}
-
-.icons-container > .contact-icon:last-child {
-    margin-right: 0px;
-}
-
-.contact-icon {
+.social-media-icon-container {
     margin: 0px 4px;
 }
 
-.contacto-info > p {
-    justify-self: center;
-    grid-row: 1 / 3 ;
-    grid-column: 3 / 4;
+.social-media-icon-container:first-child {
+    margin-left: 0px;
+}
+
+.social-media-icon-container:last-child {
+    margin-right: 0px;
+}
+
+.qr-container {
+    grid-row: 1 / 4 ;
+    grid-column: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.qr-container > p {
+    margin-bottom: 16px;
     font-family: var(--GothamBook-Font);
     font-size: 1.2rem;
     text-align: center;
@@ -73,11 +88,13 @@
 .QR {
     justify-self: center;
     align-self: center;
-    grid-row: 3 / 4;
-    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+    grid-column: 2 / 3;
+    padding: 10px;
     width: 116px;
     height: 116px;
-    background-color: aqua;
+    background-color: #FFFFFF;
+    border-radius: 4px;
 }
 
 @media (min-width: 800px) {
@@ -96,15 +113,25 @@
         line-height: 2rem;
     }
 
-    .contacto-info > span:nth-child(2n + 1) {
-        font-size: 1.8rem;
+    .contacto-info-item {
+        height: 20px;
     }
-    
-    .contacto-info > span:nth-child(2n + 2) {
+
+    .contacto-info-item > span {
         font-size: 1.8rem;
     }
 
-    .contacto-info > p {
+    .contact-icon {
+        width: 20px;
+        height: 20px;
+    }
+
+    .contacto-info-item > span:nth-child(2) {
+        margin: 0 12px;
+        font-family: var(--GothamBook-Font);
+    }
+
+    .qr-container > p {
         font-size: 1.8rem;
     }
 }
