--- a/src/styles/Icon.css
+++ b/src/styles/Icon.css
@@ -1,7 +1,49 @@
+.social-media-icon {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    background-color: var(--mustard-color);
+    border-radius: 4px;
+}
+
+.social-media-icon:after{
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    background: var(--primary-color);
+    border-radius: 4px;
+    transition: all .20s;
+}
+
+.social-media-icon:hover:after{
+    width: 100%;
+    height: 100%;
+}
+
 .icon {
     padding: 5px;
     width: 30px;
     height: 30px;
-    background-color: var(--mustard-color);
-    border-radius: 5px;
+    border-radius: 4px;
+    color: var(--primary-color);
+    z-index: 2;
+}
+
+.icon:hover{
+    color: var(--white);
+}
+
+@media (min-width: 800px) {
+    .social-media-icon {
+        height: 50px;
+    }
+
+    .icon {
+        padding: 10px;
+        width: 50px;
+        height: 50px;
+    }
 }
