--- a/src/styles/Layout/Layout.css
+++ b/src/styles/Layout/Layout.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 
-.content-container{
+.content-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,4 +11,10 @@
     width: 100%;
     padding: 0 20px;
     max-width: 1200px;
+}
+
+@media (min-width: 800px) {
+    .content-container {
+        padding: 0;
+    }
 }
