--- a/src/styles/Servicios/Servicio.css
+++ b/src/styles/Servicios/Servicio.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 48px;
-    padding-bottom: 40px;
     width: 100%;
 }
 
@@ -11,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 70px 0;
     padding: 0px 12px;
     height: 28px;
     background-color: var(--secundary-color);
@@ -25,12 +24,12 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 40px;
     width: 100%;
 }
 
 @media (min-width: 800px) {
     .Servicios > h2{
+        margin: 80px 0;
         padding: 0px 40px;
         height: 60px;
         font-size: 3.6rem;
