--- a/src/styles/Contacto/ContactoEmail.css
+++ b/src/styles/Contacto/ContactoEmail.css
@@ -5,36 +5,71 @@
 
 .email-form {
     display: grid;
-    grid-template-rows: 36px 36px 124px 64px;
+    grid-template-rows: minmax(36px, auto) minmax(36px, auto) minmax(124px, auto) 64px;
     align-items: center;
-    max-height: 268px;
+    max-height: 365px;
 }
 
-.email-form > input {
-    padding: 4px;
+.email-form--input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.email-form--input-container > input {
+    width: 100%;
+    padding: 4px 16px;
+    margin-bottom: 4px;
     height: 28px;
     border: none;
     border-radius: 5px;
-    font-family: var(--Gotham-Thin-Font);
+    font-family: var(--GothamBook-Font);
 }
 
-.email-form > input::placeholder {
+.email-form--input-container > input::placeholder {
     text-align: center;
     font-size: 1.4rem;
 }
 
-.email-form > textarea {
-    padding: 4px;
+.email-form--input-container > input:focus {
+    outline: none;
+}
+
+.email-form--input-container > textarea {
+    width: 100%;
+    padding: 8px 16px;
+    margin-bottom: 4px;
     height: 116px;
-    border-radius: 5px;
+    border-radius: 4px;
     border: none;
-    font-family: var(--Gotham-Thin-Font);
+    font-family: var(--GothamBook-Font);
     font-size: 1.4rem;
     text-align: justify;
 }
 
-.email-form > a {
+.email-form--input-container > textarea:focus {
+    outline: none;
+}
+
+.email-form--input-container .error-form-field{
+    width: 100%;
+    padding: 12px 16px 8px;
+    margin-bottom: 4px;
+    background-color: var(--primary-color);
+    font-family: var(--GothamBook-Font);
+    font-size: 1.4rem;
+    color: var(--white);
+    clip-path: polygon(0px 8px, 20px 8px, 30px 0px, 40px 8px, 100% 8px, 100% 100%, 0px 100%);
+}
+
+.submit {
     align-self: end;
+}
+
+.submit:disabled {
+    pointer-events: none;
+    background-color: var(--primary-opacity-7);
+    color: var(--mustard-opacity-7);
 }
 
 @media (min-width: 800px) {
