--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -3,7 +3,8 @@
     --primary-color: #0D3B66;
     --secundary-color: #F95738;
     --mustard-color: #F4D35E;
-    --error-color: #B71C1C;
+    --error-color: #c2272d;
+    --correct-color: #3ab549;
     --white: #FFFFFF;
     --black: #1A1A1A;
 
