--- a/src/styles/Button/MustardButton.css
+++ b/src/styles/Button/MustardButton.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 48px;
+    height: 40px;
     background-color: var(--mustard-color);
     border: none;
     border-radius: 4px;
@@ -11,6 +11,7 @@
     font-family: var(--Gotham-Black-Font);
     font-size: 1.8rem;
     text-decoration: none;
+    outline: none;
 }
 
 .mustard-btn:after{
@@ -23,11 +24,16 @@
     transition: all .20s;
 }
 
+.mustard-btn:focus{
+    border: 2px solid var(--primary-color);
+}
+
 .mustard-btn > span{
     z-index: 2;
 }
 
 .mustard-btn:hover{
+    border: none;
     color: var(--mustard-color);
 }
 
@@ -38,7 +44,7 @@
 @media (min-width: 800px) {
     .mustard-btn {
         padding: 0 24px;
-        height: 40px;
+        height: 48px;
         border-radius: 20px;
         font-size: 2rem;
     }
