--- a/src/styles/Contacto/ContactoEmail.css
+++ b/src/styles/Contacto/ContactoEmail.css
@@ -32,6 +32,7 @@
 }
 
 .email-form--input-container > input:focus {
+    border: 2px solid var(--primary-color);
     outline: none;
 }
 
@@ -48,6 +49,7 @@
 }
 
 .email-form--input-container > textarea:focus {
+    border: 2px solid var(--primary-color);
     outline: none;
 }
 
@@ -63,6 +65,7 @@
 }
 
 .submit {
+    position: relative;
     align-self: end;
 }
 
@@ -82,5 +85,13 @@
         margin: 0 auto;
         width: 80%;
         max-width: 350px;
+    }
+
+    .envio-exitoso {
+        bottom: -48px;
+    }
+
+    .error-envio {
+        bottom: -48px;
     }
 }
