--- a/src/styles/Icon.css
+++ b/src/styles/Icon.css
@@ -36,6 +36,30 @@
     color: var(--white);
 }
 
+.circular-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+}
+
+.check-icon {
+    width: 100%;
+    height: 100%;
+    background-color: var(--correct-color);
+    color: var(--white);
+    border-radius: 20px;
+}
+
+.wrong-icon {
+    width: 100%;
+    height: 100%;
+    background-color: var(--error-color);
+    color: var(--white);
+    border-radius: 20px;
+}
+
 @media (min-width: 800px) {
     .social-media-icon {
         height: 50px;
