--- a/src/styles/Servicios/ServicioItem.css
+++ b/src/styles/Servicios/ServicioItem.css
@@ -36,9 +36,8 @@
 
 @media (min-width: 800px) {
     .ServicioItem{
-        margin: 0 20px;
         padding: 0;
-        margin-bottom: 68px;
+        margin: 0 20px 40px;
         max-width: 280px;
     }
 
